// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth user add groups errors should render an error on the select if error occurred 1`] = `
<div
  className="sc-Axmtr hjHhIB"
>
  <div
    className="sc-AxmLO czuJjP"
  >
    <form
      onSubmit={[MockFunction]}
    >
      <label
        className="sc-AxjAm iLFoNS"
        htmlFor="group"
      >
        <span
          className="sc-AxirZ lbZqdG"
        >
          Choose new group
        </span>
        <span
          className="sc-AxiKw MIKJW"
        >
          something went wrong
        </span>
        <select
          className="sc-AxhUy hIXZuA"
          id="group"
          name="group"
          onChange={[MockFunction]}
        >
          <option
            value="--"
          >
            -- Select --
          </option>
          <option
            data-qa="ROLE_1_option"
            value="ROLE_1"
          >
            Group 1
          </option>
          <option
            data-qa="ROLE_2_option"
            value="ROLE_2"
          >
            Group 2
          </option>
          <option
            data-qa="ROLE_3_option"
            value="ROLE_3"
          >
            Group 3
          </option>
        </select>
      </label>
      <div
        className="sc-fzozJi lkMuvo"
      >
        <button
          className="sc-AxgMl dzrPxP"
          data-qa="add-button"
          disabled={false}
          type="submit"
        >
          Add group
        </button>
        <button
          className="sc-AxgMl iErfzZ"
          data-qa="cancel-button"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Auth user add groups no groups should render correctly with user and no groups 1`] = `
<div
  className="sc-Axmtr hjHhIB"
>
  <div
    className="sc-AxmLO czuJjP"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        data-qa="no-groups"
      >
        No groups available
      </div>
      <div
        className="sc-fzozJi lkMuvo"
      >
        <button
          className="sc-AxgMl iErfzZ"
          data-qa="cancel-button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Auth user add groups should render the add group page with a filtered list of groups 1`] = `
<div
  className="sc-Axmtr hjHhIB"
>
  <div
    className="sc-AxmLO czuJjP"
  >
    <form
      onSubmit={[MockFunction]}
    >
      <label
        className="sc-AxjAm bnkTnU"
        htmlFor="group"
      >
        <span
          className="sc-AxirZ lbZqdG"
        >
          Choose new group
        </span>
        <select
          className="sc-AxhUy czrCMV"
          id="group"
          name="group"
          onChange={[MockFunction]}
        >
          <option
            value="--"
          >
            -- Select --
          </option>
          <option
            data-qa="ROLE_1_option"
            value="ROLE_1"
          >
            Group 1
          </option>
          <option
            data-qa="ROLE_2_option"
            value="ROLE_2"
          >
            Group 2
          </option>
          <option
            data-qa="ROLE_3_option"
            value="ROLE_3"
          >
            Group 3
          </option>
        </select>
      </label>
      <div
        className="sc-fzozJi lkMuvo"
      >
        <button
          className="sc-AxgMl dzrPxP"
          data-qa="add-button"
          disabled={false}
          type="submit"
        >
          Add group
        </button>
        <button
          className="sc-AxgMl iErfzZ"
          data-qa="cancel-button"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;
